--- a/printf/Makefile
+++ b/printf/Makefile
@@ -1,7 +1,21 @@
-GCC=gcc
-FLAGS=-Werror -Wextra -Wall
-NAME=libftprintf.a
+CC = gcc
+FLAGS = -Werror -Wextra -Wall
+NAME = libftprintf.a
+OBJS = *.o
 
 $(NAME):
+	$(CC) $(FLAGS) -c 
 
-all:
+
+all: $(NAME)
+
+clean: 
+	rm -f $(OBJS)
+
+fclean: clean
+	rm -f $(NAME)
+
+re: fclean all
+
+printf:	
+	$(CC) $(FLAGS) -c ft_printf.c
